--- a/WeatherMenu/en.lproj/MainMenu.xib
+++ b/WeatherMenu/en.lproj/MainMenu.xib
@@ -41,16 +41,16 @@
 			<object class="NSMenu" id="553809235">
 				<string key="NSTitle"/>
 				<array class="NSMutableArray" key="NSMenuItems">
-					<object class="NSMenuItem" id="277026717">
+					<object class="NSMenuItem" id="536218333">
 						<reference key="NSMenu" ref="553809235"/>
-						<string key="NSTitle">About</string>
+						<string key="NSTitle">Preferences</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
-						<object class="NSCustomResource" key="NSOnImage" id="218016130">
+						<object class="NSCustomResource" key="NSOnImage" id="562187766">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">NSMenuCheckmark</string>
 						</object>
-						<object class="NSCustomResource" key="NSMixedImage" id="101234505">
+						<object class="NSCustomResource" key="NSMixedImage" id="871368250">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">NSMenuMixedState</string>
 						</object>
@@ -62,16 +62,24 @@
 						<string key="NSTitle"/>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
-						<reference key="NSOnImage" ref="218016130"/>
-						<reference key="NSMixedImage" ref="101234505"/>
+						<reference key="NSOnImage" ref="562187766"/>
+						<reference key="NSMixedImage" ref="871368250"/>
+					</object>
+					<object class="NSMenuItem" id="277026717">
+						<reference key="NSMenu" ref="553809235"/>
+						<string key="NSTitle">About</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="562187766"/>
+						<reference key="NSMixedImage" ref="871368250"/>
 					</object>
 					<object class="NSMenuItem" id="1018984529">
 						<reference key="NSMenu" ref="553809235"/>
 						<string key="NSTitle">Quit</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
-						<reference key="NSOnImage" ref="218016130"/>
-						<reference key="NSMixedImage" ref="101234505"/>
+						<reference key="NSOnImage" ref="562187766"/>
+						<reference key="NSMixedImage" ref="871368250"/>
 					</object>
 				</array>
 			</object>
@@ -109,6 +117,14 @@
 						<reference key="destination" ref="553809235"/>
 					</object>
 					<int key="connectionID">544</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">settingsMenuClicked:</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="536218333"/>
+					</object>
+					<int key="connectionID">546</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -151,9 +167,10 @@
 						<int key="objectID">537</int>
 						<reference key="object" ref="553809235"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="277026717"/>
 							<reference ref="1018984529"/>
 							<reference ref="698689971"/>
+							<reference ref="277026717"/>
+							<reference ref="536218333"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -172,6 +189,11 @@
 						<reference key="object" ref="698689971"/>
 						<reference key="parent" ref="553809235"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">545</int>
+						<reference key="object" ref="536218333"/>
+						<reference key="parent" ref="553809235"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -184,18 +206,30 @@
 				<string key="538.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="539.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="541.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="545.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">544</int>
+			<int key="maxID">546</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">AppDelegate</string>
 					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">settingsMenuClicked:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">settingsMenuClicked:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">settingsMenuClicked:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">menu</string>
 						<string key="NS.object.0">NSMenu</string>
